--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m venv .venv
-        python -m pip install --upgrade pip
+        python3 -m venv .venv
+        python3 -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install pytest flake8
 
