updates to workflow file 8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Set PYTHONPATH
       run: |
-        echo "PYTHONPATH=$(pwd)/backend" >> $GITHUB_ENV
+        export PYTHONPATH=$(pwd)/backend
     
     - name: Run pytest
       run: |
