updates to workflow file 8.5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Set PYTHONPATH
       run: |
-        export PYTHONPATH=$(pwd)/backend
+        export PYTHONPATH=./backend
     
     - name: Run pytest
       run: |
