--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,48 +2,43 @@ name: CI - 6G-Valid8 Backend
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      # Step 2: Set up Python 3.12
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-    - name: Install dependencies
-      run: |
-        python3 -m venv .venv
-        python3 -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install pytest flake8
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Check Python Path
-      run: |
-        echo "Current PYTHONPATH: $PYTHONPATH"
-        python -c "import sys; print(sys.path)"
+      # Step 4: Set PYTHONPATH to backend for proper imports
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)/backend" >> $GITHUB_ENV
 
-    - name: Set PYTHONPATH and run tests
-      run: |
-        export PYTHONPATH=$(pwd)/backend
-        echo "PYTHONPATH=$PYTHONPATH"
+      # Step 5: Verify the working directory (optional)
+      - name: Verify Working Directory
+        run: echo "Current directory: $(pwd)"
 
-    - name: Run pytest
-      run: |
-        source .venv/bin/activate
-        pytest -v > result.log || tail -n 10 result.log
-
-
-    - name: Upload test results (artifact)
-      uses: actions/upload-artifact@v4
-      with:
-        name: pytest-results
-        path: result.log
+      # Step 6: Run tests with pytest
+      - name: Run tests with pytest
+        run: |
+          export PYTHONPATH=$(pwd)/backend
+          pytest --maxfail=1 --disable-warnings -q
