--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,11 @@ jobs:
         with:
           python-version: '3.12'
 
-      # Step 3: Install dependencies
+      # Step 3: Check the directory structure (for debugging)
+      - name: List directory contents
+        run: ls -la
+
+      # Step 4: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
